Set up builds on Windows

--- a/src/Makefile
+++ b/src/Makefile
@@ -159,6 +159,9 @@ LDFLAGS=-m32
 PATH1_FLAGS=-DCODE_PATH=1 -O3
 PATH2_FLAGS=-DCODE_PATH=2 -O3 -march=pentium4 -mtune=k8
 MULTI_OBJS=sieve2.o
+BOINC_CPPFLAGS=-DBOINC -I../../boinc_32/include/boinc
+BOINC_LDFLAGS=-L../../boinc_32/lib
+BOINC_LIBS=-lboinc_api -lboinc -lstdc++ -lpthread
 endif
 
 # Runs on any x86-64 (in 64-bit mode), seperate code paths for AMD/Intel.
@@ -166,12 +169,15 @@ endif
 ifeq ($(strip $(ARCH)),x86-64)
 DEBUG_CFLAGS=-g -march=k8 -mno-3dnow -m64
 OPT_CFLAGS=-O2 -fomit-frame-pointer -ffast-math -march=k8 -mno-3dnow -m64
-CPPFLAGS=-Wall -DMULTI_PATH -DDEFAULT_L1_CACHE_SIZE=32 -DDEFAULT_L2_CACHE_SIZE=512
+CPPFLAGS=-Wall -DMULTI_PATH -DDEFAULT_L1_CACHE_SIZE=32 -DDEFAULT_L2_CACHE_SIZE=512 -DNEED_UNDERSCORE=0
 ASFLAGS=-m64
 LDFLAGS=-m64
 PATH1_FLAGS=-DCODE_PATH=1 -O3 -msse3
 PATH2_FLAGS=-DCODE_PATH=2 -O3
 MULTI_OBJS=sieve2.o
+BOINC_CPPFLAGS=-DBOINC -I../../boinc_64/include/boinc
+BOINC_LDFLAGS=-L../../boinc_64/lib
+BOINC_LIBS=-lboinc_api -lboinc -lstdc++ -lpthread
 endif
 
 # Same as ARCH=x86-64 but allow for bugs in GCC 4.3.0.
