--- a/src/Makefile
+++ b/src/Makefile
@@ -158,7 +158,7 @@ DEBUG_CFLAGS=-g -march=i586 -mtune=k8 -m32
 OPT_CFLAGS=-O2 -fomit-frame-pointer -ffast-math -march=i586 -mtune=k8 -m32
 CPPFLAGS=-Wall -DMULTI_PATH -DDEFAULT_L1_CACHE_SIZE=16 -DDEFAULT_L2_CACHE_SIZE=256 -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
 ASFLAGS=-m32
-LDFLAGS=-m32
+LDFLAGS=-m32 -static
 PATH1_FLAGS=-DCODE_PATH=1 -O3
 PATH2_FLAGS=-DCODE_PATH=2 -O3 -march=pentium4 -mtune=k8
 MULTI_OBJS=sieve2.o
@@ -190,7 +190,7 @@ DEBUG_CFLAGS=-g -march=k8 -mno-3dnow -m64
 OPT_CFLAGS=-O2 -fomit-frame-pointer -ffast-math -march=k8 -mno-3dnow -m64
 CPPFLAGS=-Wall -DMULTI_PATH -DDEFAULT_L1_CACHE_SIZE=32 -DDEFAULT_L2_CACHE_SIZE=512 -DNEED_UNDERSCORE=0 -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
 ASFLAGS=-m64
-LDFLAGS=-m64
+LDFLAGS=-m64 -static
 PATH1_FLAGS=-DCODE_PATH=1 -O3 -msse3
 PATH2_FLAGS=-DCODE_PATH=2 -O3
 MULTI_OBJS=sieve2.o
