Update windows 32-bit build to avoid SSE2 instructions in main code path

--- a/src/Makefile
+++ b/src/Makefile
@@ -158,7 +158,7 @@ DEBUG_CFLAGS=-g -march=i586 -mtune=k8 -m32
 OPT_CFLAGS=-O2 -fomit-frame-pointer -ffast-math -march=i586 -mtune=k8 -m32
 CPPFLAGS=-Wall -DMULTI_PATH -DDEFAULT_L1_CACHE_SIZE=16 -DDEFAULT_L2_CACHE_SIZE=256 -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS
 ASFLAGS=-m32
-LDFLAGS=-m32 -static
+LDFLAGS=-m32 -static -march=i586
 PATH1_FLAGS=-DCODE_PATH=1 -O3
 PATH2_FLAGS=-DCODE_PATH=2 -O3 -march=pentium4 -mtune=k8
 MULTI_OBJS=sieve2.o
